[Bug #19966] [PRISM] Fix singleton method definition